--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <title>index</title>
     <meta charset="utf-8"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href='https://tools-static.wmflabs.org/fontcdn/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="style_index.css"/>
   </head>
   <body>
     <div class = "left1">
       <h1>Whose Recent English wikipedia edits you want to see?</h1>
       <form class="edits">
-        <input id="searchTerm" type="text" class="form-control" size="50" placeholder="Enter username here.." required/>
+        <input id="searchTerm" type="text" class="form-control" size="255" placeholder="Enter username here.." required/>
         <br/>
         <button type="submit" id="submitBtn">Search</button>
       </form>
