--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <title>index</title>
     <meta charset="utf-8"/>
-    <link href='https://tools-static.wmflabs.org/fontcdn/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style_index.css"/>
   </head>
   <body>
